[package]
name = "bevy_ui_styled"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/IceSentry/bevy_ui_styled"
description = "Utility function that let's you define a bevy_ui `Style` component with `tailwindcss` inspired syntax."
exclude = ["assets/", "tools/"]

[dependencies]
bevy = { version = "0.9", default-features = false, features = [
    "bevy_ui",
    "render",
] }
anyhow = "^1.0"

[dev-dependencies]
bevy = "0.9"
