[package]
name = "bevy_ui_styled"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/IceSentry/bevy_ui_styled"
description = "Utility function that let's you define a bevy_ui `Style` component with `tailwindcss` inspired syntax."
exclude = ["assets/", "tools/"]

[dependencies]
bevy = "0.11"
anyhow = "^1.0"
bevy_ui_styled_macros = { path = "macros", version = "0.4.0" }

[dev-dependencies]
bevy = "0.11"

[workspace]
members = ["macros"]
