[package]
name = "bevy_ui_styled_macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macros for bevy_ui_styled"
repository = "https://github.com/icesentry/bevy_ui_styled"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
bevy = { version = "0.9", default-features = false, features = [
    "bevy_ui",
    "render",
] }
anyhow = "^1.0"
